# portfolio_multi_agent_system

./: .gitignore  Dockerfile.a2a-inspector  Dockerfile.alpine-glibc  Dockerfile.base  Dockerfile.goose  Dockerfile.npx  Dockerfile.playwright  Dockerfile.uvx  README.md  TODO.md  a2a_artifact_update.json  a2a_status_update.json  a2a_task_submitted_followup.json  docker-compose.a2a.yml  docker-compose.db.yml  docker-compose.mcp.yml  docker-compose.yml  pyproject.toml  sub_agent.py  submitted.json  test-commands.sh
backend/config/agents/: browser_control_agent.yml  communication_agent.yml  finance_agent.yml  persistence_agent.yml  supervisor_agent.yml  test_agent.yml  web_search_agent.yml
backend/config/prompts/: browser_control_agent.txt  communication_agent.txt  persistence_agent.txt  supervisor_agent.txt  web_search_agent.txt
backend/junk/: agent_python_a2a.py
backend/src/: test_multiturn.py
backend/src/a2a_servers/: __init__.py  a2a_client.py  agent.py  config_loader.py  configuration.py  constants.py  registry.py  supervisor.py  supervisor_python_a2a.py  supervisor_python_a2a_stream.py
backend/src/a2a_servers/utils/: models.py
backend/src/mcp_servers/: cal.py  duckduckgo.py  file_storage.py  playwright_extension.py  postgres.py  serper.py  smtp.py  yahoo_finance.py
backend/src/mcp_servers/utils/: constants.py  helper.py  models.py
backend/src/serve/: README.md  run.py
config/agents/: communication_agent.yml  finance_agent.yml  supervisor_agent.yml  web_search_agent.yml
config/models/: chatgpt_4o_mini.yml
config/prompts/: supervisor_agent.txt
db/migrations/: 001_add_schema.sql  002_add_table_structure.sql  003_add_last_update_to_pages.sql  004_add_schema_description.sql  005_status_change_constraining.sql  20250919003212_create_pages_table.sql  20250919004000_add_last_update_to_pages.sql
docker/: start.sh
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  constants.jsx  index.css
frontend/src/components/: CircularMenu.jsx  CombinedInterfaceBanners.jsx  CompanyProfile.jsx  CustomListComponent.jsx  DashboardSideBar.jsx  DropzoneArea.jsx  LoadingIndicator.jsx  Logo.jsx  MenuBar.jsx  ParticlesBackground.jsx  PlanetaryMenu.jsx  SWOTProfile.jsx  SimilarProfile.jsx  SnackbarContentWrapper.jsx  TextAreaComponent.jsx
frontend/src/components/founder/: FounderDashboardSideBar.js
frontend/src/components/investor/: InvestorDashboardSideBar.js
frontend/src/pages/: Copilot.jsx
junk/old/lingua_scraper/a2a/: README.md  a2a_tool_client.py  debug_test.py  orchestrator_agent.py  scraper_agent.py
junk/old/lingua_scraper/lg/: README.md  agent_factory.py  (+2 more)
old/lingua_scraper/a2a/: base_agent_executor.py  main.py  research_agent.py  test_agents.py
old/lingua_scraper/lg/: agents.py  data_models.py  main.py
old/lingua_scraper/mcp/: crawl4ai.py  kafka.py  scripts.sh
old/lingua_scraper/toolbased/: core_agent.py  main.py
res/: agents.yml
src/a2a_servers/: __init__.py  agent.py  agents.yml  config_loader.py  constants.py  registry.py  supervisor.py
src/mcp_servers/: caldav_server.py  duckduckgo.py  gcal.py  playwright_extension.py  smtp.py  zoho_calendar.py
(+8 files in other folders)
